<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">City4All</string>
    <string name="city4all">City4All</string>
    <string name="action_settings">Settings</string>
    <string name="error">La información introducida no es correcta</string>
    <string name="sexo">Sexo:</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="anoNcto">Año de nacimiento:</string>
    <string name="ciudad">Ciudad de residencia:</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="introducirExperiencia">Introducir experiencia</string>
    <string name="visualizarMapa">Visualizar mapa</string>
    <string name="title_activity_pregunta_escala">PreguntaEscala</string>
    <string name="enunciado">Enunciado de la pregunta</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_pregunta_radio">PreguntaRadio</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pregunta_check">PreguntaCheck</string>
    <string name="title_activity_pantalla_cuando">PantallaCuando</string>
    <string name="cuando">La experiencia que va a compartir, ¿le está ocurriendo ahora o ha sido hace un rato?</string>
    <string name="ahora">Ahora</string>
    <string name="haceRato">Hace un rato</string>
    <string name="title_activity_subir_imagen">SubirImagen</string>
    <string name="sacarFoto">Sacar foto</string>
    <string name="seleccionarGaleria">Seleccionar de la galería</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_activity_pregunta">activity_pregunta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
