<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/LblError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textColor="#00ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView android:id="@+id/LblSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:layout_column="0" />

    <RadioGroup android:id="@+id/RgrpSexo"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_row="2"
        android:layout_column="0" >

        <RadioButton android:id="@+id/RbMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:layout_column="0" />

        <RadioButton android:id="@+id/RbHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:layout_column="1" />
    </RadioGroup>

    <TextView android:id="@+id/LblAnioNcto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anoNcto"
        android:layout_row="3"
        android:layout_column="0" />

    <!--TODO
    <DatePicker android:id="@+id/DateNcto">

    </DatePicker>
    -->

    <EditText android:id="@+id/TxtAnoNcto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView android:id="@+id/LblCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:layout_row="5"
        android:layout_column="0" />

    <EditText android:id="@+id/TxtCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_row="6"
        android:layout_column="0" />

    <Button android:id="@+id/BtnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_gravity="center_horizontal"
        android:layout_row="7"
        android:layout_column="0" />

</GridLayout>