<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/LblCuando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuando"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="0" />

    <RadioGroup android:id="@+id/RgrpCuando"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_column="0" >

        <RadioButton android:id="@+id/RbAhora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ahora"
            android:layout_row="1"
            android:layout_column="0" />

        <RadioButton android:id="@+id/RbHaceRato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haceRato"
            android:layout_row="2"
            android:layout_column="0" />

    </RadioGroup>


    <Button android:id="@+id/BtnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:layout_column="0" />

</GridLayout>