<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_row="7"
    android:layout_column="7" >

    <TextView android:id="@+id/LblEnunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enunciado"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="0" />

    <CheckBox android:id="@+id/Cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 1"
        android:layout_row="1"
        android:layout_column="0" />

    <CheckBox android:id="@+id/Cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 2"
        android:layout_row="2"
        android:layout_column="0" />

    <CheckBox android:id="@+id/Cb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 3"
        android:layout_row="3"
        android:layout_column="0" />

    <CheckBox android:id="@+id/Cb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 4"
        android:layout_row="4"
        android:layout_column="0" />

    <Button android:id="@+id/BtnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anterior"
        android:layout_row="5"
        android:layout_column="0" />

    <Button android:id="@+id/BtnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:layout_row="5"
        android:layout_column="1" />

    <ImageButton android:id="@+id/BtnAnterior2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_backarrow"
        android:layout_row="6"
        android:layout_column="0"
        android:src="@drawable/ic_backarrow" />

    <ImageButton android:id="@+id/BtnSiguiente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_nextarrow"
        android:layout_row="6"
        android:layout_column="1"
        android:src="@drawable/ic_nextarrow" />

</GridLayout>