<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_row="7"
    android:layout_column="7" >

    <TextView android:id="@+id/LblEnunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enunciado"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="1" />

    <RadioGroup android:id="@+id/gruporb"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="201dp"
        android:layout_height="74dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1" >

        <RadioButton android:id="@+id/Rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_column="0" />

        <RadioButton android:id="@+id/Rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_column="1" />

        <RadioButton android:id="@+id/Rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_column="2" />

        <RadioButton android:id="@+id/Rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_column="3" />

        <RadioButton android:id="@+id/Rb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_column="4" />
    </RadioGroup>

    <Button android:id="@+id/BtnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anterior"
        android:layout_row="2"
        android:layout_column="0" />

    <Button android:id="@+id/BtnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:layout_row="2"
        android:layout_column="1" />

    <ImageButton android:id="@+id/BtnAnterior2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_revert"
        android:layout_row="3"
        android:layout_column="0"
        />

    <ImageButton android:id="@+id/BtnSiguiente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_media_next"
        android:layout_row="3"
        android:layout_column="1"
        />

</GridLayout>